# chi-neighborhood-updates

./: .gitignore  Makefile  main.R  prospector.yaml  pyproject.toml
.github/workflows/: cron-send-email.yml
chi_updates/: email.py  entrypoint.py  request.py
utils/: email.R  request.R
