[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chi_updates"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.4.4",
    "requests>=2.27.1",
    "sodapy>=2.2.0"
]

[project.optional-dependencies]
test = [
    "black",
    "docformatter",
    "isort",
    "prospector[with_mypy]",
    "pytest",
    "pytest-cov",
    "pytest-datadir>=1.3.0",
    "responses>=0.22.0"
]

[project.scripts]
main = "chi_updates.entrypoint:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.docformatter]
recursive = true
pre-summary-newline = true
blank = true
in-place = true